<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-180dp"
        android:layout_marginTop="280dp"
        android:src="@drawable/backdrop" />

    <ImageView
        android:id="@+id/logovan"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_weight="0.10"
        android:src="@drawable/van" />


    <TextView
        android:id="@+id/appname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_weight="0.10"
        android:text="@string/login_maintext"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textFontWeight="800"
        android:textColor="@color/main"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="25sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/passenger_button1"
                android:layout_width="155dp"
                android:layout_height="181dp"
                android:drawableTop="@drawable/seats"
                android:paddingTop="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/passenger_text1"
                android:background="@drawable/button_yellow"
                android:textColor="@color/white"
                android:textSize="@dimen/medium" />

            <Button
                android:id="@+id/passenger_button2"
                android:layout_width="160dp"
                android:layout_height="178dp"
                android:layout_marginLeft="20dp"
                android:width="35dp"
                android:background="@drawable/button_blue"
                android:drawableTop="@drawable/rate"
                android:fontFamily="@font/montserrat_regular"
                android:padding="20dp"
                android:text="@string/passenger_text2"
                android:textColor="@color/white"
                android:textSize="@dimen/medium" />
        </TableRow>

    </TableLayout>
    <Button
        android:id="@+id/homebutton1"
        android:layout_width="394dp"
        android:layout_height="60dp"
        android:width="35dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/passenger_text3"
        android:background="@drawable/button_gray"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="550dp"
        android:textSize="@dimen/medium"
        android:layout_weight="0.1" />

</FrameLayout>