<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="10dp">

    <ImageView
        android:id="@+id/logovan"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/van"
        android:paddingLeft="-30dp"
        android:paddingRight="-30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@color/main"
            android:width="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="7dp"
            android:ems="10"
            android:hint="@string/login_edittext1"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/medium"
            android:scrollHorizontally="false"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@color/main"
            android:width="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="7dp"
            android:ems="10"
            android:hint="@string/signup_text2"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/medium"
            android:lines="4"
            android:scrollHorizontally="false"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@color/main"
            android:width="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="7dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/medium"
            android:scrollHorizontally="false"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@color/main"
            android:width="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="7dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/medium"
            android:scrollHorizontally="false"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phonenumber_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@color/main"
            android:width="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="7dp"
            android:ems="10"
            android:hint="Phone Number"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/medium"
            android:scrollHorizontally="false"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@color/main"
            android:width="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="7dp"
            android:ems="10"
            android:hint="@string/login_edittext2"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/medium"
            android:scrollHorizontally="false"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_confirmation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@color/main"
            android:width="35dp"
            android:paddingTop="10dp"
            android:paddingBottom="7dp"
            android:ems="10"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/medium"
            android:scrollHorizontally="false"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_text2"
        android:background="@drawable/button_yellow"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="@dimen/medium"/>

</LinearLayout>
</ScrollView>