<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartSession"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/payments_banner"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:gravity="top"
            android:paddingLeft="80dp"
            android:paddingTop="15dp"
            android:text="@string/start_session"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="top"
            android:paddingLeft="80dp"
            android:paddingTop="45dp"
            android:text="@string/select_route_and_vehicle_to_start"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3.0"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        >

        <RelativeLayout
            android:id="@+id/account_route_info"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="3.0"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_route_settings"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_verfied"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Route Information"
                android:paddingLeft="90dp"
                android:paddingTop="13dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:textColor="@color/colorBrandPrimary"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="San Fernando City, La Union -"
                android:paddingLeft="90dp"
                android:paddingTop="38dp"
                android:fontFamily="@font/nunito_sans_regular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Candon, Ilocos Sur"
                android:paddingLeft="90dp"
                android:paddingTop="58dp"
                android:fontFamily="@font/nunito_sans_regular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3.0"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        >

        <RelativeLayout
            android:id="@+id/vehicle_info"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="3.0"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:orientation="vertical">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_route_settings"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_verfied"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/vehicle_information"
                android:paddingLeft="90dp"
                android:paddingTop="13dp"
                android:fontFamily="@font/nunito_sans_bold"
                android:textColor="@color/colorBrandPrimary"
                android:textSize="18sp"/>
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="San Fernando City, La Union -"
                android:paddingLeft="90dp"
                android:paddingTop="38dp"
                android:fontFamily="@font/nunito_sans_regular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Candon, Ilocos Sur"
                android:paddingLeft="90dp"
                android:paddingTop="58dp"
                android:fontFamily="@font/nunito_sans_regular"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                />
        </RelativeLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3.0"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        >

        <RelativeLayout
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="3.0"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/start_new_session"
                android:background="@drawable/button_yellow"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/white"
                android:textSize="@dimen/medium"
                android:layout_marginBottom="50dp"
                />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>